--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,5 @@
 {{page-title "Techtest"}}
 
-{{! The following component displays Ember's default welcome message. }}
-<WelcomePage />
-{{! Feel free to remove this! }}
+<Puzzle />
 
 {{outlet}}
